; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_select.c_select_open.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_select.c_select_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"_SETSIZE\00", align 1
@FD_SETSIZE = common dso_local global i32 0, align 4
@func = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @select_open(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @lua_pushstring(i32* %3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @FD_SETSIZE, align 4
  %7 = call i32 @lua_pushnumber(i32* %5, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lua_rawset(i32* %8, i32 -3)
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @func, align 4
  %12 = call i32 @luaL_openlib(i32* %10, i32* null, i32 %11, i32 0)
  ret i32 0
}

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_pushnumber(i32*, i32) #1

declare dso_local i32 @lua_rawset(i32*, i32) #1

declare dso_local i32 @luaL_openlib(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
